# pytest-houdini

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/actions/setup_houdini_license_action/: action.yml  install_apprentice_keys.py  sidefx.py
.github/workflows/: python-publish.yml  tests.yml
docs/: conf.py  index.rst  requirements.txt  tools.rst
docs/fixtures/: hip_file.rst  index.rst  nodes.rst  other.rst  shelf_tools.rst  soho.rst  ui.rst
src/pytest_houdini/: exceptions.py  plugin.py  tools.py
src/pytest_houdini/fixtures/: exceptions.py  hip_file.py  nodes.py  other.py  shelf_tools.py  soho.py  ui.py
tests/: test_tools.py
tests/fixtures/: test_hip_file.py  test_nodes.py  test_other.py  test_shelf_tools.py  test_soho.py  test_ui.py
tests/fixtures/data/: test_load_module_test_hip_file.hiplc  test_nodes.hiplc  test_shelf_files.shelf
