[build-system]
    requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2", "wheel"]
    build-backend = "setuptools.build_meta"

[tool.coverage]

    [tool.coverage.run]
        branch = true
        source =  [
            "pytest_houdini",
        ]
        omit = [
            "*tests*",
            "*/plugin.py",
        ]
        disable_warnings = [
            "module-not-imported",
            "module-not-measured",
        ]
    [tool.coverage.report]
        exclude_lines = [
            # Have to re-enable the standard pragma
            "pragma: no cover",

            # Don't complain about missing debug-only code:
            "def __repr__",
            "if self.debug",
            "if TYPE_CHECKING",

            # Don't complain if tests don't hit defensive assertion code:
            "raise AssertionError",
            "raise NotImplementedError",

            # Don't complain if non-runnable code isn't run:
            "if 0:",
            "if __name__ == .__main__.:",
        ]
        ignore_errors = true
        skip_empty = true

    [tool.coverage.html]
        directory = "coverage_html_report"

[tool.isort]
    profile = "black"
    src_paths = ["src"]
    known_houdini = ["hou"]
    sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,HOUDINI"
    import_heading_future = "Future"
    import_heading_stdlib = "Standard Library"
    import_heading_thirdparty = "Third Party"
    import_heading_firstparty = "pytest-houdini"
    import_heading_houdini = "Houdini"
    dedup_headings = true
    indented_import_headings = false

[tool.mypy]
    files = "src/pytest_houdini"
    disallow_incomplete_defs = true
    disallow_untyped_calls = true
    disallow_untyped_defs = true

    [[tool.mypy.overrides]]
        module = "hou.*"
        ignore_missing_imports = true

[tool.pytest.ini_options]
    # Disable sugar as it interferes with pytester output parsing.
    addopts = "-p no:sugar --cov --cov-report=html --cov-report=xml --color=yes"
